# crypto_predict

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: market.py
backend/app/core/: config.py  logging_config.py
backend/app/observability/: metrics.py
backend/app/schemas/: events.py  market.py
backend/app/services/: binance_stream_parser.py  channel_namer.py  gap_detector.py  interval_utils.py  market_service.py  redis_event_bus.py
backend/app/workers/: __init__.py  binance_ingestor.py  data_saver.py  gap_fill_worker.py
backend/app/ws/: market_gateway.py
backend/migrations/: 0001_init.sql  0002_timescaledb.sql
backend/scripts/: latency_e2e_probe.py  latency_trend_report.py
backend/tests/: test_binance_stream_parser.py  test_channel_namer.py  test_contracts.py  test_gap_detector.py  test_gap_fill_worker.py  test_market_api.py  test_observability_endpoints.py
contracts/: README.md
contracts/schemas/: api.market.klines.response.v1.json  kline.closed.v1.json  kline.partial.v1.json  system.gap_detected.v1.json  trade.tick.v1.json
deploy/: DEPLOYMENT_GUIDE.md
deploy/docker/: docker-compose.runtime.yml  (+2 more)
docs/: PRD_Binance_Realtime_System.md  System_Design_Binance_Realtime_v2.md  Task_Breakdown_Implementation_Plan.md  UI_UX_Design_Binance_Realtime.md
frontend/: frontend-dev.pid  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
spec/: Modern_Trading_UI_Mockup.html  UI_UX_Design_Binance_Realtime.md
(+35 files in other folders)
