[project]
name = "crypto-predict-backend"
version = "0.1.0"
description = "Binance realtime gateway and market API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "redis>=5.0.8,<6.0.0",
  "websockets>=13.0,<14.0",
  "httpx>=0.27.0,<1.0.0",
  "prometheus-client>=0.20.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.5.0,<1.0.0",
  "jsonschema>=4.23.0,<5.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
